--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
        </div>
     </main>
     <footer>
-        Made with <i class="fa-solid fa-heart"></i> by Suman Ghosh
+        Made with <i class="fa-solid fa-heart"></i> by Kiran dubbewar
     </footer>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js" integrity="sha512-fD9DI5bZwQxOi7MhYWnnNPlvXdp/2Pj3XSTRrFs5FQa4mizyGLnJcN6tuvUS6LbmgN1ut+XGSABKvjN0H6Aoow==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
